<resources>
    <string name="app_name">bxBarber</string>

    <string name="selecione_dataInicial">Data Inicial</string>
    <string name="selecione_dataFim">Data Final</string>


    <string name="menu_profissionais">Profissionais</string>
    <string name="menu_home">Home</string>
    <string name="menu_servicos">Serviços</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="agendamento">Agendamento</string>
    <string name="minhaAgenda">Minha Agenda</string>
    <string name="historico">Historico</string>
    <string name="noticias">Noticias</string>
    <string name="ajuda">Ajuda</string>
    <string name="sair">Sair</string>


    <string name="title_activity_navigation_drawercapeta">NavigationDrawercapeta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu">Menu</string>

</resources>